selfhost/test/typechecker/bindingdecl_error_type_mismatch_val.out
Error at %FILE_NAME%:1:14
Type mismatch
  |  val a: Int = "abcd"
                  ^
Expected: Int
but instead found: String
